--- a/cluster/apps/tools/bambu-studio/helm-release-storage.yaml
+++ b/cluster/apps/tools/bambu-studio/helm-release-storage.yaml
@@ -16,21 +16,29 @@ spec:
         namespace: flux-system
       interval: 15m
   values:
+    defaultPodOptions:
+      nodeSelector:
+        beta.kubernetes.io/arch: amd64
     controllers:
       main:
         containers:
           main:
             image:
-              repository: directorylister/directorylister
-              tag: 5.1.0
+              repository: pldubouilh/gossa
+              tag: v1.1.2
             env:
               TIMEZONE: "America/Chicago"
+            securityContext:
+              runAsUser: 2000
+              runAsGroup: 2000
+              fsGroup: 2000
+              fsGroupChangePolicy: "OnRootMismatch"
     service:
       main:
         controller: main
         ports:
           http:
-            port: 80
+            port: 8001
     ingress:
       main:
         enabled: true
@@ -59,4 +67,4 @@ spec:
         type: persistentVolumeClaim
         existingClaim: bambu-studio-config
         globalMounts:
-          - path: /data
+          - path: /shared
